--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "recordrtc": "^5.6.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/recordrtc": "^5.6.13",
     "eslint-config-react-app": "^7.0.1"
   }
 }
